email/1.3/modules/ROOT/pages/email-list.adoc
= List Emails with Email Connector Examples - Mule 4
:page-aliases: connectors::email/email-list.adoc


Anypoint for Email (Email Connector) provides the *List - IMAP* and *List - POP3* operations to list emails from any part of the flow. The following examples illustrate how to configure these operations for the connector.

<<send-attachments,List Emails from an IMAPS Server>>
Configure the *List - IMAP* operation to list all the emails in the configured IMAP mailbox folder from an IMAPS server with TLS connection. Additionally, set a *For Each* scope and *Set Variable* components to iterate over the emails and save the email body and attachment content in variables.

<<send-attachments,List Emails from a POP3 Server>>
Configure the *List - POP3* operation to list all the emails in the configured POP3 mailbox folder that matches with the specified *Pop3 matcher* criteria.

== List Emails from an IMAPS Server

The following example illustrates how to list all the emails in the configured IMAP mailbox folder from an IMAPS server with TLS connection. The flow initiates with a *Scheduler* component, and then the *List -IMAP* operation list the emails. Subsequently,  a *For Each* scope and *Set Variable* components iterate over the emails content payload and save the body and attachments in variables:

The following screenshot shows the app flow for this example:

.List Emails from an IMAPS Server flow
image::email-list-flow-1.png[List Emails from an IMAPS Server flow]

To create the flow: +

. Create a new Mule project in Studio.
. In the *Mule Palette* view, select the *Scheduler* component and drag it onto the canvas. +
This source initiates a flow when a time-based condition is met.
. Drag the *List - IMAP* operation to the right of the *Scheduler* source. +
. On the *List - IMAP* configuration screen, click the plus sign (*+*) next to the *Connector configuration* field to configure a global element for the operation.
. In the *Connection* field, select *IMAPS Connection*.
. In the *General* tab, enter the following values:
+
* *Host* +
`imap.gmail.com`
* *Port* +
`993`
* *User* +
`user1@domain.com`
* *Password* +
`passwordconnection`
+

start=7]
. In the *TLS Configuration* section, select *Edit inline*.
. In the *Trust Store Configuration* section, enter the following values:
+
* *Path* +
`aTruststore.jks`
* *Password* +
`passwordtrust`
+
[start=9]
. In the *Key Store Configuration* section, enter the following values:
+
* *Path* +
`aKeystore`
* *Password*
`passwordkey`
+
[start=10]
. In the *Advanced* section, set *Enabled Protocols* to `TLSv1.2,SSLv3`.
. Click *OK* to close the configuration window.

hen working with a single email in the payload, you use `payload.body` to access the
email content. The example above sets the body to a variable called `email-content`.

To access the email attachments, you can use `payload.attachments.{nameOfTheAttachment}`. The example above sets an attachment called `json` that is carried by the retrieved email within a new variable `json-attachment`.


== List Emails from a POP3 Server


== Configure a Global Element for the Connector

There are two configurations for listing emails stored on a server:

* POP3 or POP3S Connection
* IMAP or IMAPS Connection
=======
Email Connector can list emails from any part of the flow. This capability is a change from the Mule 3 transport, which could retrieve emails only as a result of inbound endpoint polling.


These configurations share a set of parameters required to establish a connection, including the server `host` and `port`, and the `username` and `password` to connect with a protected mail server. The `username` and `password` parameters are optional because some servers are not secured with a username and password.

These connections enable you to configure a TLS context that enables both SSL and TLS encryption.

. In Studio, navigate to the *Global Elements* view.
. Click *Create* to open the *Choose Global Type* view.
. In the *Filter* field, type `database`, select *Database Config*, and click *OK*.
. In the *Database Config* window, for the *Connection* field, select *Derby Connection*.
. Click *Configure* to add the required Derby JDBC driver and select one of: +
+
* *Add recommended library* +
Install the recommended library.
* *Use local file* +
Install the library using a local file.
* *Add Maven dependency* +
Install a Maven dependency to add to the project.
+
. Set *Database* to `derbyDB` and *Subsub protocol* to `directory`.
. On the *Transactions* tab, optionally specify the transaction isolation, or XA transactions when connecting to the database.
. On the *Advanced* tab, optionally specify connection pooling and reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect to the database.
. Click *OK*.

The following screenshot shows the configuration in Studio:

Both of

The following are examples of POP3 and IMAP configurations:

.POP3 Configuration
[source,xml,linenums]
----
<email:pop3-config name="pop3-config">
    <email:pop3-connection host="pop.gmail.com" port="995" user="<username>@<emailadress>" password="<password>"/>
</email:pop3-config>
----

.IMAP Configuration
[source,xml,linenums]
----
<email:imap-config name="imap-config">
    <email:imap-connection host="imap.gmail.com" port="912" user="<username>@<emailadress>" password="<password>"/>
</email:imap-config>
----

The examples look similar. For differences, see the Configurations section in
the xref:email-documentation.adoc[Email Connector Technical Reference].

=== Secured Connections

The IMAP and POP3 configurations enable connections that are secured by the secured versions of the POP3S and IMAPS protocols. These connections enable you to configure a TLS context that enables both SSL and TLS encryption.


Here is an IMAPS example:

.IMAP Configuration with TLS
[source,xml,linenums]
----
<email:imap-config name="tls">
    <email:imaps-connection host="${port}" port="${port}">
        <tls:context enabledProtocols="TLSv1.2,SSLv3">
            <tls:key-store path="aKeystore" password="password"/>
            <tls:trust-store path="aTruststore.jks" password="changeit"/>
        </tls:context>
    </email:imaps-connection>
</email:imap-config>
----

A TLS context is also available for the POP3S connection.

== Listing Emails

The List operations return all the emails in the configured mailbox server that reside in a parameterized mailbox folder.

Here is the basic syntax for listing the emails in a mailbox:

.For POP3
[source,xml,linenums]
----
<email:list-pop3 config-ref="pop3-config" mailboxFolder="INBOX"/>
----

.For IMAP
[source,xml,linenums]
----
<email:list-imap config-ref="imap-config" mailboxFolder="INBOX"/>
----

The previous examples return all the emails that reside in the `INBOX` folder in the configured mailbox servers.

Note that the `config-ref` attribute points to the configurations that are declared in the configuration examples.

== Getting Data from Emails

Incoming emails carry the content of the email that is in the payload, which includes the email body and any attachments. The following example iterates over all the retrieved emails:

[source,xml,linenums]
----
<flow name="retrieveWithAttachments">
    ...
    <email:list-imap config-ref="imap-config"/>
    <foreach>
        <set-variable variableName="email-content" value="payload.body" />
        <set-variable variableName="json-attachment" value="payload.attachments.json" />
    </foreach>
</flow>
----

When working with a single email in the payload, you use `payload.body` to access the
email content. The example above sets the body to a variable called `email-content`.

To access the email attachments, you can use `payload.attachments.{nameOfTheAttachment}`. The example above sets an attachment called `json` that is carried by the retrieved email within a new variable `json-attachment`.

== Attributes

When listing emails, you might be interested not only in the email's content but also in its metadata (for example, the subject, from addresses, to addresses, received date, and so on). These attributes vary depending on the type of configuration that you are using. For example, the IMAP protocol provides more metadata about the retrieved email like the `recent`, `seen`, `deleted`, and `answered` flags.

Email Connector uses Mule message attributes to access this information, while the message payload always contains the email's content.

For details on the structure of email attributes, see  xref:email-documentation.adoc[Email Module Documentation Reference].

== Matching

When listing emails, you can filter them using the `<email:pop3-matcher>` and `<email:imap-matcher>` elements. These elements define the criteria that can be used to process an email.

Here is an example of an IMAP matcher that rejects emails with subjects that do not match the `[0-9]` regular expression and that have not been seen before:

[source,xml,linenums]
----
<email:list-imap config-ref="config">
    <email:imap-matcher subjectRegex="[0-9]" seen="EXCLUDE"/>
</email:list-imap>
----

All matcher attributes are optional and are ignored if they are not provided. They are also related to each other under an `AND` operator, meaning that all the criteria must be true.

The previous example declares an inner, non-reusable matcher that is proprietary to a particular component. However, matchers can be declared as reusable elements (as named top-level elements), such as the following `pop3-matcher`:

[source,xml,linenums]
----
<email:pop3-matcher name="pop3Matcher"
                    subjectRegex="Email Subject"
                    fromRegex="@mulesoft"/>

<flow name="listEmails">
  ...
  <file:list pop3-matcher="pop3Matcher" />
  ...
</flow>
----

=== IMAP Matcher Versus POP3 Matcher

The IMAP protocol provides metadata about the email that allows more precise filtering than POP3.

The POP3 matcher contains these parameters:

[source,xml,linenums]
----
<email:pop3-matcher
  receivedSince="2015-06-03T13:21:58+00:00"
  receivedUntil="2015-07-03T13:21:58+00:00"
  sentSince="2015-05-03T13:21:58+00:00"
  sentUntil="2015-06-03T13:21:58+00:00"
  subjectRegex="BETA:"
  fromRegex="@mulesoft"/>
----

The IMAP matcher looks like this:

[source,xml,linenums]
----
<email:imap-matcher
  receivedSince="2015-06-03T13:21:58+00:00"
  receivedUntil="2015-07-03T13:21:58+00:00"
  sentSince="2015-05-03T13:21:58+00:00"
  sentUntil="2015-06-03T13:21:58+00:00"
  subjectRegex="BETA:"
  fromRegex="@mulesoft"
  recent="EXCLUDE|INCLUDE|REQUIRE"
  seen="EXCLUDE|INCLUDE|REQUIRE"
  deleted="EXCLUDE|INCLUDE|REQUIRE"
  answered="EXCLUDE|INCLUDE|REQUIRE"/>
----

Notice that the IMAP matcher includes the `recent`, `seen`, `deleted`, and `answered` parameters.

The `recent`, `seen`, `deleted` and `answered` parameters will default to INCLUDE. You can combine them however you prefer, however you must always consider that if one of the flags is set as INCLUDE, then the emails marked with that flag will always be included, regardless of the values assigned to the rest of the flags.

For example, if you have the following matcher for your listener:

[source, xml, linenums]
----
<flow name="imapListEmailsExcludeAnswered">
    ...
    <email:list-imap config-ref="gmail">
        <email:imap-matcher answered="EXCLUDE"/>
    </email:list-imap>
    ...
</flow>
----

Then the values for each flag will be: answered="EXCLUDE", deleted="INCLUDE", seen="INCLUDE" and recent="INCLUDE". Meaning that all emails marked as recent, seen or deleted will be included in the result, regardless of whether they are marked as answered or not.

== Naming Strategy for Attachments

Email Connector provides a parameter for the List and On New Email operations that enables you to specify a strategy for naming attachments. This parameter is set at the configuration level, but can be overridden at the operation
level.

See xref:email-trigger.adoc[Naming Strategy For Attachments] for more information and examples.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
